Fixed navbar alignment

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -79,12 +79,10 @@ a:link {
 
 .nav-item {
 	list-style: none;
-	margin: 15px 1px 1px 1px;
-	padding: 0;
-	// display: flex;
+	margin: 2px;
+	padding: 0px;
 	justify-content: space-around;
 	position: absolute;
-	padding: 4px;
 
 	background:linear-gradient(90deg,
 		rgba(10, 30, 10, 0.5)0%,
@@ -100,33 +98,31 @@ a:link {
 }
 
 
-
 .nav-item > a {
 	position: relative;
 	color: green;
 	display: inline;
+	// This padding sets the mobile navbar logo padding
 	padding: 20px;
 	text-decoration:none;
-	font-size: 24px;
-	// font-family: 'Marck Script';
 	font-family: 'Krona One';
 	width:100%;
 	text-align:center;
-	z-index: 1;
-	// justify-content: space-around;
-	
-}
-
-.nav-item > a {
-	color: green;
 	font-weight: bold;
 	font-size: 13px;
+	z-index: 1;
+}
+
+.nav-item a:first-child {
+	padding:7px;
+	bottom:3px;
 
 }
 
 
 // Nav Bar Julius Logo
 .nav-item > a > img {
+	position: relative;
 	border: solid green 1px;
 	width: 55px;
 	height: 55px;
@@ -153,7 +149,11 @@ a:link {
 // Mobile Media Queries
 
 @media screen and (max-width: 600px) {
-  .nav-item > a:not(:first-child) {display: none;}
+  .nav-item > a:not(:first-child) {
+  	display: none;
+  }
+
+
   .nav-item > a.icon {
   	top: 10px;
   	right: 10px;
@@ -165,14 +165,19 @@ a:link {
 
 // Adds address to mobile nav bar
   .nav-address {
-  	padding: 10px;
+  	padding: 15px;
   	position: relative;
-  	left: 2%;
-  	font-size: 12px;
+  	left: 10%;
+  	font-size: 10px;
   	display: inline-block;
   	background:transparent;
   	color:white;
+
   }
+
+
+
+
 }
 
 
@@ -203,6 +208,7 @@ a:link {
     text-align:left;
     background-color:black;
     z-index: 0;
+
   }
 
 
@@ -211,8 +217,10 @@ a:link {
   	float: none;
   	display: inline-block;
   	text-align: left;
+  	left:10px;
   	z-index:1;
   }
+
 
 
 
